Fixed Stack Overflow Bug with FrontendAuth

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -15,7 +15,7 @@ nav {
  width: 100%;
  height: 50px;
  background-color: white;
- position: fixed;
+ position: absolute;
  top: 0px;
  color: black;
  font-size: 18px;
